--- a/vercel.json
+++ b/vercel.json
@@ -10,7 +10,7 @@
     {
       "src":"/(.*)",
       "dest":"src/main.ts",
-      "method":["GET",
+      "methods":["GET",
                 "POST",
                 "PUT",
                 "DELETE"
